[XFORMS] Bug 391586, bind on an insert changes the in-scope evaluation context, p=msterlin@us.ibm.com, r=aaronr+me, NPOTB